# openai-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: agent.py  config.py  tools.py
evals/: test_behavior.py  test_faithfulness.py  test_golden.py  test_json.py  test_relevance.py  test_tools.py
