[project]
name = "openai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "deepeval>=3.6.3",
    "openai-agents>=0.3.3",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "evals"
]
python_files = [
    "test_*.py"
]
